--- a/html1.html
+++ b/html1.html
@@ -1,8 +1,9 @@
 <html>
 <head>
-<title> My Page </title>
+<title> My Books Page </title>
+<meta name = "keywords" content = "Books, CDs, Magazines" />
 </head>
 <body>
-<h1> My Page </h1>
-</body>
+<h2 align = "center" > Welcome to my books page </h2>
+</body>    
 </html>
