Updated with description for SEO

--- a/html1.html
+++ b/html1.html
@@ -1,9 +1,9 @@
 <html>
-<head>
-<title> My Books Page </title>
-<meta name = "keywords" content = "Books, CDs, Magazines" />
-</head>
-<body>
-<h2 align = "center" > Welcome to my books page </h2>
-</body>    
+    <head>
+        <title> My Filthy Books ! </title>
+        <meta name = "description" content = "Filthy books for sale" />
+    </head>
+    <body>
+        <h3 align = "right"> Welcome to My Filthy Books ! </h3>
+    </body>
 </html>
