Refresh the web page every 5 seconds

--- a/html1.html
+++ b/html1.html
@@ -1,9 +1,9 @@
 <html>
-    <head>
-        <title> My Filthy Books ! </title>
-        <meta name = "description" content = "Filthy books for sale" />
-    </head>
-    <body>
-        <h3 align = "right"> Welcome to My Filthy Books ! </h3>
-    </body>
+<head>
+<title> Refresh Page </title>
+<meta http-equiv = "refresh" content = "5" />
+</head>
+<body>
+<h1 align = "center"> Page refreshes in every 5 seconds </h1>
+</body>
 </html>
