Redirecting user to another web page (Page redirection)

--- a/html1.html
+++ b/html1.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-<title> Refresh Page </title>
-<meta http-equiv = "refresh" content = "5" />
+<title> Page Redirection </title>
+<meta http-equiv = "refresh" content = "8; url = http://www.autolanka.com/" />   
 </head>
 <body>
-<h1 align = "center"> Page refreshes in every 5 seconds </h1>
+<h2 align = "center"> You will be redirected to our main page </h2>
 </body>
 </html>
