--- a/html2.html
+++ b/html2.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title> Background image </title>    
+<title> Background color </title>    
 </head>
 <body bgcolor = "black" text = "yellow">
 <h2 align = "center"> Yellow text in black background</h2>
