--- a/html4.html
+++ b/html4.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title> WElcome to My Page </title>
+<title> Welcome to My Page </title>
 </head>
 <body bgcolor = "red" text = "white">
 <h2 align = "center"> I Like to learn HTML </h2>
