Done with cumulative exercise

--- a/html4.html
+++ b/html4.html
@@ -1,8 +1,10 @@
 <html>
 <head>
-<title> Welcome to My Page </title>
+<title>ABC Carworld Ltd</title>
+<meta name = "keywords" content = "ABC, cars, carworld"/>
+<meta http-equiv = "refresh" content = "10; url = http://autolanka.com" />
 </head>
-<body bgcolor = "red" text = "white">
-<h2 align = "center"> I Like to learn HTML </h2>
-</body>
+<body bgcolor = "#F8F400" text = "#3D001C">
+<h2 align = "center">You will be redirected into our main page soon </h2>
+</body> 
 </html>
