--- a/html5.html
+++ b/html5.html
@@ -1,11 +1,7 @@
 <html>
 <head></head>
 <body>
-<p align = "center"> This is a center aligned paragraph text </p>
-<p align = "right"> This is a right aligned paragraph text</p>
-<p align = "left"> This is a left aligned paragraph text </p>
-<p align = "justify"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-
-<p> This is a paragraph text with no given attributes </p>
+This is text line 1 <br/>
+This is text line 2
 </body>
 </html>
