preformatted text <pre> tag

--- a/html5.html
+++ b/html5.html
@@ -1,7 +1,9 @@
 <html>
 <head></head>
 <body>
-This is text line 1 <br/>
-This is text line 2
+<pre>
+This is text line 1
+        This is text line 2
+</pre>    
 </body>
 </html>
