horizontal rule <hr/> tag

--- a/html5.html
+++ b/html5.html
@@ -1,9 +1,11 @@
 <html>
 <head></head>
 <body>
-<pre>
-This is text line 1
-        This is text line 2
-</pre>    
+<hr/>
+<hr size = "50" />
+<hr width = "100"/>
+<hr color = "red"/>
+
+<hr size = "25" width = "1000" color = "blue"/>
 </body>
 </html>
