center align - <center> tag

--- a/html5.html
+++ b/html5.html
@@ -1,11 +1,6 @@
 <html>
 <head></head>
 <body>
-<hr/>
-<hr size = "50" />
-<hr width = "100"/>
-<hr color = "red"/>
-
-<hr size = "25" width = "1000" color = "blue"/>
+<center> This is a simple line of text </center>
 </body>
 </html>
