--- a/html5.html
+++ b/html5.html
@@ -1,15 +1,7 @@
 <html>
 <head></head>
 <body>
-<center> Sun Ray Holiday Resort </center>
-<hr/>
-<p> Sun Ray is a beach hotel where you can <br/>
-have the best holiday ever </p>
-<hr>
-For more information please contact: 
-<pre>
-    Bookings Manager
-        Tel: 234-5677   or  234-5688
-</pre>
+<!--This is a HTML comment-->
+<!--Comments are ignored by the browser when parsing HTML-->
 </body>
 </html>
