definition list - <dl>, <dt>, <dd>

--- a/html5.html
+++ b/html5.html
@@ -1,7 +1,13 @@
 <html>
 <head></head>
 <body>
-<!--This is a HTML comment-->
-<!--Comments are ignored by the browser when parsing HTML-->
+<dl>
+<dt> CPU </dt>
+<dd> Central Processing Unit </dd>
+<dt> RAM </dt>
+<dd> Random Access Memory </dd>
+<dt> UPS </dt>
+<dd> Unirruptable Power Supply </dd>
+</dl>
 </body>
 </html>
