definition list - exercise 2

--- a/html5.html
+++ b/html5.html
@@ -2,12 +2,12 @@
 <head></head>
 <body>
 <dl>
-<dt> CPU </dt>
-<dd> Central Processing Unit </dd>
-<dt> RAM </dt>
-<dd> Random Access Memory </dd>
-<dt> UPS </dt>
-<dd> Unirruptable Power Supply </dd>
+<dt> Mount Everest</dt>
+<dd> Tallest mountain in the world </dd>
+<dt> Nile </dt>
+<dd> Longest river in the world </dd>
+<dt> Angle Falls</dt>
+<dd> Highest waterfall in the world </dd>
 </dl>
 </body>
 </html>
