ordered list / numbered list - <ol>, <li>

--- a/html5.html
+++ b/html5.html
@@ -1,13 +1,10 @@
 <html>
 <head></head>
 <body>
-<dl>
-<dt> Mount Everest</dt>
-<dd> Tallest mountain in the world </dd>
-<dt> Nile </dt>
-<dd> Longest river in the world </dd>
-<dt> Angle Falls</dt>
-<dd> Highest waterfall in the world </dd>
-</dl>
+<ol>
+<li> Apples </li>
+<li> Oranges </li>
+<li> Grapes </li>
+</ol>
 </body>
 </html>
