unordered list - <ul>, <li>

--- a/html5.html
+++ b/html5.html
@@ -1,10 +1,10 @@
-<html>
+ <html>
 <head></head>
 <body>
-<ol>
-<li> Apples </li>
-<li> Oranges </li>
-<li> Grapes </li>
-</ol>
+<ul>
+<li> Cricket </li>
+<li> Football </li>
+<li> Chess </li>
+</ul>
 </body>
-</html>
+ </html>
