Regular lists exercise

--- a/html5.html
+++ b/html5.html
@@ -1,10 +1,17 @@
- <html>
+<html>
 <head></head>
 <body>
-<ul>
-<li> Cricket </li>
-<li> Football </li>
-<li> Chess </li>
-</ul>
+Item list:
+<ol>
+<li> Books 
+    <ul>
+        <li> SE </li>
+        <li> SQA </li>
+    </ul>
+</li>
+<li> CDs </li>
+<li> Stationary </li>
+<li> Toys </li>
+</ol>
 </body>
- </html>
+</html>
