--- a/html5.html
+++ b/html5.html
@@ -1,11 +1,7 @@
 <html>
 <head></head>
 <body>
-<h1 align = "center"> This is a h1 heading </h1>
-<h2 align = "right"> This is a h2 heading </h2>
-<h3 align = "left"> This is a h3 heading </h3>
-<h4 align = "center"> This is a h4 heading </h4>
-<h5 align = "right"> This is a h5 heading </h5>
-<h6> This is a h6 heading </h6>
+This is a normal text line <br/>
+<b> This sentence is bold </b>
 </body>
 </html>
