--- a/html5.html
+++ b/html5.html
@@ -1,7 +1,7 @@
 <html>
 <head></head>
 <body>
-This is a normal text line <br/>
-<b> This sentence is bold </b>
+This is a normal line of text <br/>
+<i> This sentense is in italics </i>
 </body>
 </html>
