--- a/html5.html
+++ b/html5.html
@@ -2,6 +2,6 @@
 <head></head>
 <body>
 This is a normal line of text <br/>
-<i> This sentense is in italics </i>
+<u> This sentense is underlined </u>
 </body>
 </html>
