font tag - <font>

--- a/html5.html
+++ b/html5.html
@@ -1,7 +1,17 @@
 <html>
 <head></head>
 <body>
-This is a normal line of text <br/>
-<u> This sentense is underlined </u>
+<font face = "Ariel" size = "6" color = "red"> 
+This sentence is in Ariel, size 6, red color 
+</font> <br/>
+
+<font face = "Tahoma" size = "3" color = "blue"> 
+This sentence is in Tahoma, size 3, blue color
+</font> <br>
+
+<font size = "1" color = "green"> 
+This sentence is in default font face, size 1, green color 
+</font> 
+
 </body>
 </html>
