cumulative exercise - text styles

--- a/html5.html
+++ b/html5.html
@@ -1,17 +1,14 @@
 <html>
 <head></head>
 <body>
-<font face = "Ariel" size = "6" color = "red"> 
-This sentence is in Ariel, size 6, red color 
-</font> <br/>
-
-<font face = "Tahoma" size = "3" color = "blue"> 
-This sentence is in Tahoma, size 3, blue color
-</font> <br>
-
-<font size = "1" color = "green"> 
-This sentence is in default font face, size 1, green color 
-</font> 
-
+<h1 align = "center"> <font face = "Arial" color = "red">
+Book Sale !!! </font> 
+</h1>
+<p> <font face = "Tahoma" size = "4">
+Over <u> 40% </u> discount on all <br/> 
+<b> Computer Science </b> textbooks...</font> </p>
+<i> <font face = "Garamond" size = "6"> Hurry 
+come and visit our bookshop. 
+</font> </i>
 </body>
 </html>
