--- a/html5.html
+++ b/html5.html
@@ -1,14 +1,9 @@
 <html>
 <head></head>
 <body>
-<h1 align = "center"> <font face = "Arial" color = "red">
-Book Sale !!! </font> 
-</h1>
-<p> <font face = "Tahoma" size = "4">
-Over <u> 40% </u> discount on all <br/> 
-<b> Computer Science </b> textbooks...</font> </p>
-<i> <font face = "Garamond" size = "6"> Hurry 
-come and visit our bookshop. 
-</font> </i>
+<a href = "html1.html"> Click here for HTML 1 </a> <br>
+<a href = "html2.html"> Click here for HTML 2 </a> <br>
+<a href = "html3.html"> Click here for HTML 3 </a> <br>
+<a href = "html4.html"> Click here for HTML 4 </a>
 </body>
 </html>
