Cumulative exercise - hyperlinks

--- a/html5.html
+++ b/html5.html
@@ -1,9 +1,15 @@
 <html>
-<head></head>
+<head>
+<meta http-equiv = "refresh" content = "10; url = http://
+www.autolanka.com"/>
+</head>
 <body>
-<a href = "html1.html"> Click here for HTML 1 </a> <br>
-<a href = "html2.html"> Click here for HTML 2 </a> <br>
-<a href = "html3.html"> Click here for HTML 3 </a> <br>
-<a href = "html4.html"> Click here for HTML 4 </a>
+<h1 align = "center"> Sorry We have moved !! </h1>
+<p> You will be automatically redirected to <br/>
+our new site in 10 seconds or click the link <br/>
+given below: </p>
+
+<center> <a href = "http://www.autolanka.com"> Visit New Site
+</a> </center>
 </body>
 </html>
