image tag <img>

--- a/html5.html
+++ b/html5.html
@@ -1,15 +1,9 @@
 <html>
-<head>
-<meta http-equiv = "refresh" content = "10; url = http://
-www.autolanka.com"/>
-</head>
+<head></head>
 <body>
-<h1 align = "center"> Sorry We have moved !! </h1>
-<p> You will be automatically redirected to <br/>
-our new site in 10 seconds or click the link <br/>
-given below: </p>
-
-<center> <a href = "http://www.autolanka.com"> Visit New Site
-</a> </center>
+<img src = "img/r.jpg" align = "left"/> 
+<img src = "img/r.jpg" align = "right"/>
+<img src = "img/r.jpg"/> <br>
+<img src = "img/s.jpg" width = "250" height = "250" />
 </body>
 </html>
