<img> tag - exercise 1

--- a/html5.html
+++ b/html5.html
@@ -1,9 +1,12 @@
 <html>
 <head></head>
 <body>
-<img src = "img/r.jpg" align = "left"/> 
-<img src = "img/r.jpg" align = "right"/>
-<img src = "img/r.jpg"/> <br>
-<img src = "img/s.jpg" width = "250" height = "250" />
+<img src = "img/s.jpg" width = "200" height = "200"/>
+<h1 align = "center"> <font face = "Ariel" color = "red">
+Hello World !!!
+</font> </h1>
+<center> <font face = "Tahoma" size = "5"> <i> 
+This is my school
+</i></font> </center>
 </body>
 </html>
