<img> tag - exercise 2

--- a/html5.html
+++ b/html5.html
@@ -1,12 +1,14 @@
 <html>
-<head></head>
-<body>
-<img src = "img/s.jpg" width = "200" height = "200"/>
-<h1 align = "center"> <font face = "Ariel" color = "red">
-Hello World !!!
-</font> </h1>
-<center> <font face = "Tahoma" size = "5"> <i> 
-This is my school
-</i></font> </center>
+<head>
+<title> House for Rent </title>
+</head>
+<body bgcolor = "yellow">
+<img src = "img/r.jpg"/ align = "left">
+<h1 align = "center"> <font face = "Tahoma" color = "red">
+<u> House for Rent </u> </font> </h1>
+<p> <font face = "Arial" size = "5"> A two bedroom house for rent at: <br/> 
+120, Wijerama Lane, <br/> Colombo <br/> </font> </p>
+<font face = "Tahoma" size = "6" color = "blue"> <u> <i>  
+Monthly rental : Rs 8,000 LKR </i> </u> </font>
 </body>
 </html>
