--- a/html5.html
+++ b/html5.html
@@ -1,14 +1,32 @@
 <html>
 <head>
-<title> House for Rent </title>
+<title> The Garden Shop </title>
 </head>
-<body bgcolor = "yellow">
-<img src = "img/r.jpg"/ align = "left">
-<h1 align = "center"> <font face = "Tahoma" color = "red">
-<u> House for Rent </u> </font> </h1>
-<p> <font face = "Arial" size = "5"> A two bedroom house for rent at: <br/> 
-120, Wijerama Lane, <br/> Colombo <br/> </font> </p>
-<font face = "Tahoma" size = "6" color = "blue"> <u> <i>  
-Monthly rental : Rs 8,000 LKR </i> </u> </font>
+<body bgcolor = "#7DC623">
+<img src = "img/n.jpg" align = "left" width = "50" height = "75"/>
+<h1 align = "center"> The Garden Shop </h1>  <br/>
+<h3> Every thing you need for your <br> 
+garden under one roof... </h3>
+<hr color ="black" size = "5"/>
+
+<ul>
+<li> Garden Tools </li>
+<li> Fertilizers </li>
+<li> Pots & plants etc </li>
+</ul>
+<hr color ="black" size = "5"/>
+
+<p> <font face = "Arial" color = "green"> You can also get
+<u> expert advice </u> on gardening from <br> our friendly staff.
+Call us to make an appointment. <br>
+They will visit you. <br> 
+</font> </p>
+
+<pre>
+100, Colombo Road,
+    Kandy                                                                                                           Tel: 234-5689
+</pre>
+<center> <a href ="http://www.autolanka.com"> 
+Visit our branches </a> </center>
 </body>
 </html>
