Basic structure of a table in HTML

--- a/html5.html
+++ b/html5.html
@@ -1,32 +1,10 @@
 <html>
-<head>
-<title> The Garden Shop </title>
-</head>
-<body bgcolor = "#7DC623">
-<img src = "img/n.jpg" align = "left" width = "50" height = "75"/>
-<h1 align = "center"> The Garden Shop </h1>  <br/>
-<h3> Every thing you need for your <br> 
-garden under one roof... </h3>
-<hr color ="black" size = "5"/>
-
-<ul>
-<li> Garden Tools </li>
-<li> Fertilizers </li>
-<li> Pots & plants etc </li>
-</ul>
-<hr color ="black" size = "5"/>
-
-<p> <font face = "Arial" color = "green"> You can also get
-<u> expert advice </u> on gardening from <br> our friendly staff.
-Call us to make an appointment. <br>
-They will visit you. <br> 
-</font> </p>
-
-<pre>
-100, Colombo Road,
-    Kandy                                                                                                           Tel: 234-5689
-</pre>
-<center> <a href ="http://www.autolanka.com"> 
-Visit our branches </a> </center>
+<head></head>
+<body>
+<table>
+<tr> <th> Name </th> <th> Mark </th> </tr>
+<tr> <td> Mala </td> <td> 60 </td> </tr>
+<tr> <td> Kamal </td> <td> 70 </td> </tr>
+</table>
 </body>
 </html>
