align attribute for table

--- a/html5.html
+++ b/html5.html
@@ -1,7 +1,7 @@
 <html>
 <head></head>
 <body>
-<table border = "1">
+<table align = "right">
 <tr> <th> Name </th> <th> Mark </th> </tr>
 <tr> <td> Mala </td> <td> 60 </td> </tr>
 <tr> <td> Kamal </td> <td> 70 </td> </tr>
