--- a/html5.html
+++ b/html5.html
@@ -1,10 +1,10 @@
 <html>
 <head></head>
 <body>
-<table bgcolor = "yellow">
+<table>
 <tr> <th> Name </th> <th> Mark </th> </tr>
 <tr> <td> Mala </td> <td> 60 </td> </tr>
-<tr> <td> Kamal </td> <td> 70 </td> </tr>
+<tr> <td> Kamal </td> <td bgcolor = "green"> 70 </td> </tr>
 </table>
 </body>
 </html>
