--- a/html5.html
+++ b/html5.html
@@ -1,10 +1,11 @@
 <html>
 <head></head>
 <body>
-<table border = "1" cellspacing = "10">
-<tr> <th> Name </th> <th> Mark </th> </tr>
-<tr> <td> Mala </td> <td> 60 </td> </tr>
-<tr> <td> Kamal </td> <td> 70 </td> </tr>
+<table border = "1">
+<caption> Student Marks </caption>
+<tr> <th> Name </th> <th> Marks </th></tr>
+<tr> <td> Mala </td> <td> 60 </td></tr>
+<tr> <td> Kamala <td> 70 </td></tr>
 </table>
 </body>
 </html>
