align attribute for the <caption> of table

--- a/html5.html
+++ b/html5.html
@@ -2,7 +2,7 @@
 <head></head>
 <body>
 <table border = "1">
-<caption> Student Marks </caption>
+<caption align = "bottom"> Student Marks </caption>
 <tr> <th> Name </th> <th> Marks </th></tr>
 <tr> <td> Mala </td> <td> 60 </td></tr>
 <tr> <td> Kamala <td> 70 </td></tr>
