--- a/html5.html
+++ b/html5.html
@@ -2,10 +2,9 @@
 <head></head>
 <body>
 <table border = "1">
-<caption align = "bottom"> Student Marks </caption>
-<tr> <th> Name </th> <th> Marks </th></tr>
-<tr> <td> Mala </td> <td> 60 </td></tr>
-<tr> <td> Kamala <td> 70 </td></tr>
+<tr><th> Student No </th> <th> Name </th></tr>
+<tr> <td> ST100</td> <td> Nimal </td></tr>
+<tr> <td> ST200</td> <td> Mala </td></tr>
 </table>
 </body>
 </html>
