--- a/html5.html
+++ b/html5.html
@@ -2,9 +2,11 @@
 <head></head>
 <body>
 <table border = "1">
-<tr><th> Student No </th> <th> Name </th></tr>
-<tr> <td> ST100</td> <td> Nimal </td></tr>
-<tr> <td> ST200</td> <td> Mala </td></tr>
+<tr> <th> Item </th> <th> Price </th></tr>
+<tr> <td> Rice </td> <td align = "center"> 70 </td></tr>
+<tr> <td> Suger </td> <td align = "center"> 60 </td></tr>
+<tr> <td> Dhal </td> <td align = "center"> 75 </td></tr>
+<tr> <td> Flour </td> <td align = "center"> 40 </td></tr>
 </table>
 </body>
 </html>
