--- a/html5.html
+++ b/html5.html
@@ -1,12 +1,10 @@
 <html>
 <head></head>
 <body>
-<table border = "1">
-<tr> <th> Item </th> <th> Price </th></tr>
-<tr> <td> Rice </td> <td align = "center"> 70 </td></tr>
-<tr> <td> Suger </td> <td align = "center"> 60 </td></tr>
-<tr> <td> Dhal </td> <td align = "center"> 75 </td></tr>
-<tr> <td> Flour </td> <td align = "center"> 40 </td></tr>
+<table border = "1" cellspacing = "5">
+<tr align = "center"> <th> Name </th> <th> Marks </th></tr>
+<tr align = "center"> <td> Mala </td> <td> 52 </td></tr>
+<tr align = "center"> <td> Gayani </td> <td bgcolor = "green"> 87 </td></tr>
 </table>
 </body>
 </html>
