cumulative exercise for tables

--- a/html5.html
+++ b/html5.html
@@ -1,10 +1,12 @@
 <html>
 <head></head>
 <body>
-<table border = "1" cellspacing = "5">
-<tr align = "center"> <th> Name </th> <th> Marks </th></tr>
-<tr align = "center"> <td> Mala </td> <td> 52 </td></tr>
-<tr align = "center"> <td> Gayani </td> <td bgcolor = "green"> 87 </td></tr>
+<table border = "2">
+<caption align = "bottom"> Towns & their location </caption>
+<tr bgcolor = "green"> <th> Town </th> <th> Province </th></tr>
+<tr bgcolor = "blue"> <td> Colombo </td> <td align = "center"> Western </td></tr>
+<tr> <td> Kandy</td> <td align = "center"> Central </td></tr>
+<tr bgcolor = "blue"> <td> Galle </td> <td align = "center"> Southern </td></tr>
 </table>
 </body>
 </html>
