frames in columns - basic structure

--- a/html5.html
+++ b/html5.html
@@ -1,12 +1,5 @@
 <html>
 <head></head>
-<body>
-<table border = "2">
-<caption align = "bottom"> Towns & their location </caption>
-<tr bgcolor = "green"> <th> Town </th> <th> Province </th></tr>
-<tr bgcolor = "blue"> <td> Colombo </td> <td align = "center"> Western </td></tr>
-<tr> <td> Kandy</td> <td align = "center"> Central </td></tr>
-<tr bgcolor = "blue"> <td> Galle </td> <td align = "center"> Southern </td></tr>
-</table>
-</body>
+<frameset cols = "40%, 60%">
+</frameset>
 </html>
