frames in columns - with attached frames

--- a/html5.html
+++ b/html5.html
@@ -1,5 +1,7 @@
 <html>
 <head></head>
-<frameset cols = "25%, *, 25%" rows = "50%, 50%">
+<frameset cols = "25%, 75%">
+<frame src = "html2.html"/>
+<frame src = "html3.html"/>
 </frameset>
 </html>
