frames in rows - with attached frames

--- a/html5.html
+++ b/html5.html
@@ -1,7 +1,8 @@
 <html>
 <head></head>
-<frameset cols = "25%, 75%">
+<frameset rows = "100, 100, *">
 <frame src = "html2.html"/>
 <frame src = "html3.html"/>
+<frame src = "html4.html"/>
 </frameset>
 </html>
