--- a/html5.html
+++ b/html5.html
@@ -1,7 +1,8 @@
 <html>
 <head></head>
-<frameset rows = "100, 100, *">
+<frameset cols = "40%,60%">
 <frame src = "html2.html"/>
+<frameset rows = "50%, 50%">
 <frame src = "html3.html"/>
 <frame src = "html4.html"/>
 </frameset>
