--- a/html5.html
+++ b/html5.html
@@ -1,8 +1,9 @@
 <html>
 <head></head>
-<frameset rows = "40%, 60%">
-<frame src = "html2.html"/>
 <frameset cols = "40%, 60%">
+<frame src = "html1.html"/>
+<frameset rows = "30%, *, 30%">
+<frame src = "html2.html"/>
 <frame src = "html3.html"/>
 <frame src = "html4.html"/>
 </frameset>
