--- a/html5.html
+++ b/html5.html
@@ -1,10 +1,12 @@
 <html>
 <head></head>
-<frameset cols = "40%, 60%">
+<frameset cols = "25%, *, 25%">
 <frame src = "html1.html"/>
-<frameset rows = "30%, *, 30%">
+<frameset rows = "25%, *, 25%">
 <frame src = "html2.html"/>
 <frame src = "html3.html"/>
 <frame src = "html4.html"/>
+</frameset>
+<frame src = "html1.html"/>
 </frameset>
 </html>
