updated the form ex1

--- a/html5.html
+++ b/html5.html
@@ -1,12 +1,13 @@
 <html>
 <head></head>
 <body>
-<h1> Registration Form</h1>
+<h1> <u> Orkwood Furnitures Ltd </u> </h1>
+<h3> <u> Order Form </u> </h3> 
 <form>
 Name: <input type = "text" name = "name" /> <br>
 Address: <input type = "text" name = "address" /> <br>
-Customer code: <input type = "password" name = "cCode"/> <br>
-Select a size <br>
+Password: <input type = "password" name = "cCode"/> <br>
+Select a size: <br>
 <input type = "radio" name = "size" value = "K"/> King
 <input type = "radio" name = "size" value = "T"/> Twin
 <input type = "radio" name = "size" value = "S" checked /> Small <br> 
@@ -25,8 +26,8 @@ Please share your commnets with us: <br>
 <textarea name = "comments" rows = "6" cols = "60">
 Comments...
 </textarea> <br>
-<input type = "submit" name = "cmd1" value = "Save"/>
-<input type = "reset" name = "cmd2" value = "Cancel"/> 
+<input type = "submit" name = "cmd1" value = "Send Order"/>
+<input type = "reset" name = "cmd2" value = "Cancel Order"/> 
 </form>
 </body>
 </html>
