updated the form ex2

--- a/html6.html
+++ b/html6.html
@@ -1,7 +1,8 @@
 <html> 
 <head></head> 
 <body>
-<h1> Room Reservation </h1>
+<h1> <u> Sun Ray Holiday Resorts </u> </h1>
+<h3> <u> Room Reservation </u> </h3>
 <form>
 Name: <input type = "text" name = "name"/> <br>
 Address: <input type = "text" name = "address"/> <br>
@@ -14,10 +15,10 @@ No. of rooms:
 <option value = "4"> 4 </option>
 <option value = "5"> 5 </option>
 </select> <br>
-Type of room: 
+Type of room: <br>
 Sea side <input type ="radio" name = "room" value = "S" checked/>
 Hill side <input type = "radio" name = "room" value = "H" /> <br>
-Extras: 
+Extras: <br>
 Meals <input type = "checkbox" name = "extras1" value = "meals"/>
 Pool <input type = "checkbox" name = "extras2" value = "pool"/>
 TV <input type ="checkbox" name = "extras3" value = "TV" checked /> <br>
