updated the form ex3

--- a/html7.html
+++ b/html7.html
@@ -14,13 +14,14 @@ Country
 <option value = "GB"> Great Britain </option>
 <option value = "AUS"> Australia </option>
 </select> <br>
-Do you want our newsletter ? 
+Do you want our newsletter ? <br>
 <input type = "radio" name = "newsletter" value = "Y" checked/> Yes
 <input type = "radio" name = "newsletter" value = "N" /> No <br>
 Any Comments ? <br>
 <textarea name = "comments" rows = "8" cols = "80">
-</textarea>
-<input type = "submit" name = "cmd1" value = "Send"/>
+</textarea> <br>
+<input type = "submit" name = "cmd1" value = "Reserve"/>
+<input type = "reset" name = "cmd2" value = "Cancel"/>
 </form>
 </body>
 </html>
