--- a/html8.html
+++ b/html8.html
@@ -3,7 +3,7 @@
 <body>
 <h1> Colombo West Accessories Ltd </h1>
 <h3> <u> Order Confirmation </u> </h3>
-<form>
+<form method = "POST" enctype = "text/plain" action = mailto:msmanawadu@gmail.com >
 Customer Name: <input type = "text" name = "cName"/> <br>
 E-mail Address: <input type ="text" name = "email"/> <br>
 Invoice No: <input type = "text" name = "invoiceNo"/> <br>
