Target Links - open the link in a new tab

--- a/html10.html
+++ b/html10.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<title>Strike Tag</title>
+<title>Target Links</title>
 </head>
 <body>
-<strike>There is a line through this text</strike>
+<a href = "html9.html" target = "_blank"> Visit New Page </a>
 </body>
 </html>
