<marquee> - scrolling text

--- a/html10.html
+++ b/html10.html
@@ -1,8 +1,10 @@
 <html>
 <head>
-<title>Target Links</title>
+<title>Marquee Tag</title>
 </head>
 <body>
-<a href = "html9.html" target = "_blank"> Visit New Page </a>
+<marquee>This text is awsome. Beacause it is scrolling 
+all across the width of the browser window. Isn't that cool ?
+</marquee>
 </body>
 </html>
