internal frame - <iframe>- inserting a html document inside another html document

--- a/html10.html
+++ b/html10.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-<title>Marquee Tag</title>
+<title>Internal Frame</title>
 </head>
 <body>
-<marquee>This text is awsome. Beacause it is scrolling 
-all across the width of the browser window. Isn't that cool ?
-</marquee>
+<h1>Welcome to UPLOAD Page...</h1>
+<iframe src = "html9.html" scrolling = "yes"></iframe>
+<h2>Thanks for Uploading, Good Bye !</h2>
 </body>
 </html>
